@@ -1,3 +1,7 @@
+2014-07-27  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_vt100_parser.c: Minor fixes around ml_vt100_parser_t::yield.
+
 2014-07-26  Araki Ken  <arakiken@users.sf.net>
 
 	* doc/ja/README.ja, man/mlterm.1: Updated.
